feture responsive designn

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
 
     <main class="main-content">
-      <section class="left-section">
+      <aside class="left-section">
         <div class="left-container">
           <div class="profile">
             <img src="./i.jpg" />
@@ -69,7 +69,7 @@
             </ul>
           </div>
         </div>
-      </section>
+      </aside>
       <section class="right-section">
         <div class="wraper">
           <h1>Stack of Tecnologies</h1>
@@ -122,6 +122,8 @@
               <h4>Jest</h4>
               <h4>Cypress</h4>
               <h4>Vite Test</h4>
+                            <h4>React Testilg Library </h4>
+
             </li>
             <h1 style="color: green">Frontend</h1>
             <li class="right-section-item">
