--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       <aside class="left-section">
         <div class="left-container">
           <div class="profile">
-            <img src="./i.jpg" />
+            <img src="./a.jpg" />
             <h2 class="name">Agasi Chilingariani</h2>
-            <p class="career">Software Engeneer</p>
+            <!-- <p class="career">Software Engeneer</p> -->
           </div>
 
           <div class="contact-info">
@@ -95,11 +95,23 @@
                 Working with services : SNS, SQS,RDS,API Gateway + Lambda,Lambda
                 Authorizer,S3,Cloud Watch, IAM
               </p>
+
+   
+          
+            </li>
+            <li class="right-section-item java">
               <h3
-                style="color: green; text-align: center; padding-bottom: 10px"
-              >
-                DOCKER
-              </h3>
+              style=" text-align: center; padding-bottom: 10px"
+            >
+             JAVA 
+             <hr>
+             Spring boot +Jpa
+            </h3>
+            </li>
+            <li class="right-section-item">
+            <h3 style="color: green; text-align: center">Docker</h3>
+
+
             </li>
 
             <li class="right-section-item">
@@ -207,7 +219,7 @@ style="display: flex; width: 100%; gap: 5px; justify-content: center; flex-wrap:
           console.error(error);
         }
       };
-      handleForm()
+    //  handleForm()
     </script>
 
   </body>
